# IntoTheDumpster

./: readme.md
project1/: TokenReplacer.hs
project10/: Xoundbar.hs
project11/: .gitignore  ChangeLog.md  DeliveryEst.hs  DeliveryEst.php  README.md  config.ini  input.csv  package.yaml  stack.yaml
project12/: README.md
project13/: Lepak.hs
project14/: .gitignore
project15/: package-lock.json  package.json
project16/: GoRegex.go
project17/: package-lock.json  package.json
project18/: package-lock.json  package.json
project19/: package-lock.json  package.json
project2/: Cashier.hs
project20/: KLNFT.sol  klnft.json
project21/: README.md
project23/: Cargo.toml
project24/: .env.temp  Dockerfile  package-lock.json  package.json
project25/: Binance.hs  Main.hs  Tsurucap.hs  Wise.hs
project26/: package-lock.json  package.json
project27/: edmw.js  index.js  package-lock.json  package.json
project28/: Maze.hs  MazeStateMap.hs
project29/: Dockerfile  readme.md
project29/blogpostcrewplayground/: pyproject.toml  report.md
project29/blogpostcrewplayground/src/blogpostcrewplayground/: crew.py
project3/: facebook_messenger_webhook.php
project30/: EightFlexibleContexts.hs  EighteenTemplateHM.hs  EighteenTemplateHTH.hs  ElevenStandaloneDeriving.hs  FifteenGadts.hs  FiveBangPatterns.hs  FourDeriveGeneric.hs  FourteenTypeFamilies.hs  FourteenTypeFamilies_two.hs  MiscConcurrent.hs  NineAllowAmbiguousTypes.hs  NineteenNoMonomorphismRestriction.hs  OneOverloadedStrings.hs  SevenRecordWildCards.hs  SeventeenTypeOperators.hs  SixTypeApplications.hs  (+12 more)
(+158 files in other folders)
