[project]
name = "blogpostcrewplayground"
version = "0.1.0"
description = "BlogPostCrewPlayground using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
blogpostcrewplayground = "blogpostcrewplayground.main:run"
run_crew = "blogpostcrewplayground.main:run"
train = "blogpostcrewplayground.main:train"
replay = "blogpostcrewplayground.main:replay"
test = "blogpostcrewplayground.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
